--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "sass": "node-sass --watch public/assets/sass/main.scss public/assets/css/main.css --source-map public/assets/css/main.css.map"
     },
     "dependencies": {
+        "@reduxjs/toolkit": "^2.2.3",
         "axios": "^0.27.2",
         "bootstrap": "^5.1.3",
         "isomorphic-unfetch": "^3.1.0",
@@ -26,8 +27,9 @@
         "react-toast-notifications": "^2.5.1",
         "react-toastify": "^9.0.4",
         "reactstrap": "^9.1.1",
-        "redux": "^4.2.0",
+        "redux": "^4.2.1",
         "redux-devtools-extension": "^2.13.9",
+        "redux-persist": "^6.0.0",
         "redux-thunk": "^2.4.1",
         "select2": "^4.1.0-rc.0",
         "swiper": "^8.2.2",
